<resources>
    <string name="app_name">ToDoList</string>

    <string name="signUp_toolbar">Sign Up</string>
    <string name="signUp_et_mail">Mail</string>
    <string name="signUp_et_password">Password</string>
    <string name="signUp_et_passwordAgain">Password Again</string>
    <string name="signUp_et_name">Name</string>
    <string name="signUp_et_surname">Surname</string>
    <string name="signUp_btn">Sign Up</string>

    <string name="signIn_toolbar">Sign In</string>
    <string name="signIn_btn">Sign In</string>
    <string name="signIn_tv_forgetPassword">Forget password</string>

    <string name="profile_toolbar">Profile</string>
    <string name="profile_logout">Logout</string>
    <string name="profile_main">Main</string>


</resources>
